--- a/style.css
+++ b/style.css
@@ -3,19 +3,62 @@
     padding: 0;
 }
 body{
-    background-color: red;
+    background-color: whitesmoke;
 }
 #links {
     float: left;
     width: 50%;
     height: 100vh;
-    background-color: white;
+    background-color: grey;
     overflow-y: scroll;
 }
 #rechts {
     float: right;
     width: 50%;
     height: 100vh;
-    background-color: grey;
+    background-color: white;
     overflow-y: scroll;
+}
+
+#title {
+    width: 40vw;
+    padding: 1% 3% 1% 5%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2%;
+    border-style: solid;
+    border-radius: 1vw;
+}
+#title img {
+    height: 32px;
+    float: right;
+    padding: 2px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+#uitleg {
+    width: 40vw;
+    padding: 1% 3% 1% 5%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1%;
+    border-style: solid;
+    border-radius: 1vw;
+}
+
+#print {    
+    resize: vertical;
+    overflow: auto;
+    width: 742.5px;
+    height: 525px;
+    border-style: solid;
+    margin-top: 2%;
+    margin-left: auto;
+    margin-right: 3%;
+    background-color: white;
+}
+
+#info {
+    visibility: hidden;
 }
